Added time axis

--- a/tempo.html
+++ b/tempo.html
@@ -207,7 +207,7 @@
 			// maximize div.visSpace
 			var visSpace = d3.select('div.visSpace');
 			var visSpaceBounds = visSpace.node().getBoundingClientRect();
-			visSpace.style("height", (window.innerHeight-visSpaceBounds.top-10) + 'px');
+			//visSpace.style("height", (window.innerHeight-visSpaceBounds.top-10) + 'px');
 
 			var visSVG = document.getElementById('visSVG');
 			var bounding = visSVG.getBoundingClientRect();
