--- a/tempo.html
+++ b/tempo.html
@@ -288,7 +288,7 @@
 				range: false,
 				min: 0.0, max: 1.0,
 				value: POINT_OPACITY,
-				step: 0.05,
+				step: 0.05/8,
 				slide: function( event, ui ) {
 					POINT_OPACITY = ui.value;
 					tempo.renderGL();
