--- a/tempo.html
+++ b/tempo.html
@@ -14,6 +14,7 @@
 
 	<script src="lib/d3.min.js" charset="utf-8"></script>
 	<script src="lib/jquery.min.js"></script>
+	
 	<script src="lib/jquery-ui.js"></script>
 
 	<!-- local libraries -->
@@ -121,7 +122,7 @@
 
 	<!-- visualization space -->
 	<div class="visSpace" width="100%">
-		<svg id="visSVG" width="100%" height="100%"></svg>
+		<svg id="visSVG" width="100%" height="100%"><defs></defs></svg>
 		<canvas id="visCanvas"></canvas>
 		<svg id="interactSVG" width="0" height="0"></svg>
 	</div>
@@ -267,7 +268,7 @@
 				tempo.renderGL();
 			}
 		}
-		window.onresize = resizeWindow;
+		//window.onresize = resizeWindow;
 
 		function initUI()
 		{
