Clip for linechart

--- a/tempo.html
+++ b/tempo.html
@@ -268,7 +268,7 @@
 				tempo.renderGL();
 			}
 		}
-		//window.onresize = resizeWindow;
+		window.onresize = resizeWindow;
 
 		function initUI()
 		{
