--- a/tempo.html
+++ b/tempo.html
@@ -150,6 +150,10 @@
 
 		// color of point, to pass to fragment shader
 		varying lowp vec4 pointColor;
+
+		// color of points
+		const vec3 COLOR = vec3(0.15);
+		const vec3 HI_COLOR = vec3(0.702*1.1, 0, 0);
 		    
 		void main(void) 
 		{
@@ -165,7 +169,7 @@
 
 				bvec2 exclude = equal(aVertexFilter, vec2(9999.0));
 				if (any(exclude)) {
-					pointColor = vec4(0, 0, 0, 1);
+					pointColor = vec4(COLOR, 1);
 				}
 				else
 				{
@@ -175,17 +179,18 @@
 					if (all(m0) && all(m1)) 
 					{
 						// brush
-						pointColor = vec4(0.16, 0, 0, 1);
+						//pointColor = vec4(0.2, 0, 0, 1.37);
+						pointColor = vec4(HI_COLOR, 1.65);
 					}
 					else
 					{
-						pointColor = vec4(0, 0, 0, 1);
+						pointColor = vec4(COLOR, 1);
 					}
 				}
 			}
 			else
 			{
-				pointColor = vec4(0, 0, 0, 1);
+				pointColor = vec4(COLOR, 1);
 			}
 		}
 
