Added search to var selection list.

--- a/tempo.html
+++ b/tempo.html
@@ -358,7 +358,7 @@
 				tempo.renderGL();
 			}
 		}
-		window.onresize = resizeWindow;
+		//window.onresize = resizeWindow;
 
 		function initUI()
 		{
