return window.onresize

--- a/tempo.html
+++ b/tempo.html
@@ -486,7 +486,7 @@
 				tempo.renderGL();
 			}
 		}
-		//window.onresize = resizeWindow;
+		window.onresize = resizeWindow;
 
 		function initUI()
 		{
