--- a/tempo.html
+++ b/tempo.html
@@ -47,12 +47,14 @@
 			-ms-user-select: none;
 			user-select: none;
 			cursor: default;
+			overflow-x: hidden;
+			overflow-y: hidden;
 		}
 		.slider {
-			font-size: 10px;
+			font-size: 8px;
 			padding-left: 10px;
 			width: 50px;
-			height: 6px;
+			height: 4px;
 			display: inline-block;
 		}
 		div.appTitle {
@@ -63,9 +65,15 @@
 			background-color: #4e4e4e;
 		}
 
-		div.visSpace {
+		div.spacefillingContainer {
+			margin: 0px 0px;
 			height: 700px;
-			margin: 5px 5px;
+		}
+
+		div.visSpace {
+			margin-left: 120px;
+			padding-top: 20px;
+			height: 100%;
 		}
 
 		#visSVG {
@@ -78,6 +86,15 @@
 			left: 0px;
 			z-index: 100;
 			pointer-events: none;
+		}
+
+		#uiPanel {
+			padding: 15px 5px;
+			background-color: #4e4e4e;
+			color: white;
+			float: left; 
+			height: 100%;
+			width: 110px;
 		}
 
 		#interactSVG {
@@ -100,30 +117,35 @@
 		<b>Tempo</b> - Visualization of (many) time series
 	</div>
 
-	<!-- upper div -->
-	<div width="100%" style="padding: 5px 5px">
-		<div style="display: inline-block">
-			<div style="display: inline-block">
-				<input id="checkShowPoints" type="checkbox" onclick="scatterOptions()">Show points |
-			</div>
-			&nbsp;size&nbsp;&nbsp;<div class="slider" id="sliderPointSize"></div>
-			
-			&nbsp;opacity&nbsp;&nbsp;<div class="slider" id="sliderPointOpacity"></div>
-		</div>
-		
-		<div style="display: inline-block">
-			<div style="display: inline-block">
-				<input id="checkShowLines" type="checkbox" onclick="scatterOptions()">Show lines |
-			</div>
-			&nbsp;width&nbsp;&nbsp;<div id="sliderLineWidth" class="slider"></div>			
-		</div>
-	</div>
 
-	<!-- visualization space -->
-	<div class="visSpace" width="100%">
-		<svg id="visSVG" width="100%" height="100%"><defs></defs></svg>
-		<canvas id="visCanvas"></canvas>
-		<svg id="interactSVG" width="0" height="0"></svg>
+	<!-- container space to hold the visualization space -->
+	<div class="spacefillingContainer" width="100%">
+
+		<!-- IU space -->
+		<div id="uiPanel">
+			<div>
+			
+				<div style="display: inline-block">
+					<input id="checkShowPoints" type="checkbox" onclick="scatterOptions()"><b>Points</b><br>
+					<div class="slider" id="sliderPointSize"></div>&nbsp;&nbsp;size<br>
+					<div class="slider" id="sliderPointOpacity"></div>&nbsp;&nbsp;opacity<br>
+				</div>
+			</div>
+
+			<div style="margin-top: 20px">
+				<div style="display: inline-block">
+					<input id="checkShowLines" type="checkbox" onclick="scatterOptions()"><b>Lines</b><br>
+					<div id="sliderLineWidth" class="slider"></div>&nbsp;&nbsp;width<br>		
+				</div>
+			</div>
+		</div>
+
+		<!-- visualization space -->
+		<div class="visSpace" height="100%">
+			<svg id="visSVG" width="100%" height="100%"><defs></defs></svg>
+			<canvas id="visCanvas"></canvas>
+			<svg id="interactSVG" width="0" height="0"></svg>
+		</div>
 	</div>
 
 	<!-- scatterplot points shader -->
@@ -478,7 +500,7 @@
 		function resizeWindow()
 		{
 			// maximize div.visSpace
-			var visSpace = d3.select('div.visSpace');
+			var visSpace = d3.select('div.spacefillingContainer');
 			var visSpaceBounds = visSpace.node().getBoundingClientRect();
 			visSpace.style("height", (window.innerHeight-visSpaceBounds.top-10) + 'px');
 
