--- a/tempo.html
+++ b/tempo.html
@@ -126,16 +126,31 @@
 			<div>
 			
 				<div style="display: inline-block">
-					<input id="checkShowPoints" type="checkbox" onclick="scatterOptions()"><b>Points</b><br>
+					<input id="checkShowPoints" type="checkbox" onclick="scatterOptions()"><b>points</b><br>
 					<div class="slider" id="sliderPointSize"></div>&nbsp;&nbsp;size<br>
 					<div class="slider" id="sliderPointOpacity"></div>&nbsp;&nbsp;opacity<br>
+				
+					<p>&nbsp;
+					<b>color with:</b><br>
+					<input class="pointColorRadio" id="pointColorConstant" type="radio" name="pointColor" value="none" checked>nothing<br>
+					<input class="pointColorRadio" id="pointColorTimeOfDay" type="radio" name="pointColor" value="time window">time of day<br>
+					<input class="pointColorRadio" id="pointColorTimeWindow" type="radio" name="pointColor" value="time window">time window<br>
+
+
 				</div>
 			</div>
 
-			<div style="margin-top: 20px">
+			<div style="margin-top: 15px">
 				<div style="display: inline-block">
 					<input id="checkShowLines" type="checkbox" onclick="scatterOptions()"><b>Lines</b><br>
 					<div id="sliderLineWidth" class="slider"></div>&nbsp;&nbsp;width<br>		
+
+					<p>&nbsp;
+					<b>color with:</b><br>
+					<input class="lineColorRadio" id="lineColorConstant" type="radio" name="lineColor" value="none">nothing<br>
+					<input class="pointColorRadio" id="lineColorTimeOfDay" type="radio" name="lineColor" value="time window" checked>time of day<br>
+					<input class="pointColorRadio" id="lineColorTimeWindow" type="radio" name="lineColor" value="time window">time window<br>
+
 				</div>
 			</div>
 		</div>
@@ -152,7 +167,7 @@
 	<script id="shader-vs-points" type="x-shader/x-vertex">
 
 		precision mediump float;
-		attribute vec3 aVertexPosition;
+		attribute vec4 aVertexPosition;
 		attribute vec2 aVertexFilter;
 
 		uniform mat4 uMVMatrix;
@@ -168,6 +183,7 @@
 		// filter, to be used in brushing and linking
 		uniform int filter;
 		uniform int renderFilter;
+		uniform int colorSource;
 
 		uniform vec2 filterMin;
 		uniform vec2 filterMax;
@@ -187,6 +203,12 @@
 		const int RENDER_FILTER_NONE = 0;
 		const int RENDER_FILTER_IN = 1;
 		const int RENDER_FILTER_OUT = 2;
+
+		const int COLOR_CONSTANT = 0;
+		const int COLOR_TIME_OF_DAY = 1;
+		const int COLOR_TIME_WINDOW = 2;
+		// color scale
+		uniform float colorScale[21];
 
 		void main(void) 
 		{
@@ -256,6 +278,28 @@
 				p = vec2(-999.0);
 			}
 
+			// color
+			if (inFilter && filter != FILTER_NONE) {
+				pointColor = vec4(HI_COLOR, 1.65);
+			}
+			else 
+			{
+				if (colorSource == COLOR_CONSTANT) 
+				{
+					pointColor = vec4(COLOR, 1);
+				}
+				else if (colorSource == COLOR_TIME_OF_DAY) 
+				{
+					//int i = 3*(int(floor(aVertexPosition.w * 7.0 + 0.5)));
+					int i = int(aVertexPosition.w)*3;
+					pointColor = vec4(colorScale[i], colorScale[i+1], colorScale[i+2], 1);
+				}
+				else 
+				{
+					pointColor = vec4(0, 0, 1, 1);
+				}
+			}
+
 			// project / clip
 			gl_Position = uPMatrix * uMVMatrix * vec4(p * rangeLen + rangeMin, 0.0, 1.0);
 			
@@ -283,7 +327,7 @@
 	to an offline texture -->
 	<script id="shader-vs-brush-dump" type="x-shader/x-vertex">
 		precision mediump float;
-		attribute vec3 aVertexPosition;
+		attribute vec4 aVertexPosition;
 		attribute vec2 aVertexFilter;
 
 		// projection matrix
@@ -327,7 +371,7 @@
 	to an offline texture -->
 	<script id="shader-vs-timeline-brush" type="x-shader/x-vertex">
 		precision mediump float;
-		attribute vec3 aVertexPosition;
+		attribute vec4 aVertexPosition;
 		attribute vec2 aVertexFilter;
 
 		// projection matrix
@@ -379,7 +423,7 @@
 	<!-- connected scatterplot shader -->
 	<script id="shader-vs-lines" type="x-shader/x-vertex">
 		precision mediump float;
-		attribute vec3 aVertexPosition;
+		attribute vec4 aVertexPosition;
 		attribute vec4 aVertexColor;   
 		attribute vec2 aVertexFilter;
 
@@ -544,6 +588,55 @@
 			d3.select("#checkShowPoints").node().checked = SHOW_SCATTER_POINTS;
 			d3.select("#checkShowLines").node().checked = SHOW_SCATTER_LINES;
 	
+			var pointColorSource = POINT_COLOR_SOURCE;
+			d3.select("#pointColorConstant").node().checked = pointColorSource == COLOR_CONSTANT;
+			d3.select("#pointColorTimeOfDay").node().checked = pointColorSource == COLOR_TIME_OF_DAY;
+			d3.select("#pointColorTimeWindow").node().checked = pointColorSource == COLOR_TIME_WINDOW;
+
+			var lineColorSource = LINE_COLOR_SOURCE;
+			d3.select("#lineColorConstant").node().checked = lineColorSource == COLOR_CONSTANT;
+			d3.select("#lineColorTimeOfDay").node().checked = lineColorSource == COLOR_TIME_OF_DAY;
+			d3.select("#lineColorTimeWindow").node().checked = lineColorSource == COLOR_TIME_WINDOW;
+
+			d3.select('body').selectAll('.pointColorRadio').on("click", function() {
+				var id = d3.select(this).attr("id");
+				var source = null;
+				switch(id)
+				{
+				case "pointColorConstant":
+					source = COLOR_CONSTANT;
+					break;
+				case "pointColorTimeOfDay":
+					source = COLOR_TIME_OF_DAY;
+					break;
+				case "pointColorTimeWindow":
+					source = COLOR_TIME_WINDOW;
+					break;
+				}
+				tempo.setPointColorSource(source);
+				console.log("point color source: " + source);
+			});
+
+			d3.select('body').selectAll('.lineColorRadio').on("click", function() {
+				var id = d3.select(this).attr("id");
+				var source = null;
+				switch(id)
+				{
+				case "lineColorConstant":
+					source = COLOR_CONSTANT;
+					break;
+				case "lineColorTimeOfDay":
+					source = COLOR_TIME_OF_DAY;
+					break;
+				case "lineColorTimeWindow":
+					source = COLOR_TIME_WINDOW;
+					break;
+				}
+				tempo.setLineColorSource(source);
+				console.log("line color source: " + source);
+
+			});
+
 			d3.select('body')
 				.on("keydown", function() {
 					if (event.keyCode == 16) {
