Improved timeline brush reaction

--- a/tempo.html
+++ b/tempo.html
@@ -428,9 +428,12 @@
 
 		void main() 
 		{
+			/*
 			float dist = distance( gl_PointCoord, vec2(0.5) );
 			float alpha = 1.0 - smoothstep(0.45,0.5,dist);
 			gl_FragColor = vec4(HI_COLOR, alpha * 0.25);
+			*/
+			gl_FragColor = vec4(HI_COLOR, 0.25);
 		}
 	</script>
 
