time series smoothing with moving average

--- a/ecotime.html
+++ b/ecotime.html
@@ -22,9 +22,9 @@
 			fony-family: Helvetica;
 			font-size: 10pt;
 			/* prevent scrolling */
-			position: fixed; overflow-y:scroll;
+			position: fixed; overflow-y:scroll;		
 			
-			
+			/* prevent text selection */
 			-webkit-touch-callout: none;
 			-webkit-user-select: none;
 			-khtml-user-select: none;
